<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (c) 2010-2011, The MiCode Open Source Community (www.micode.net)

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/list_background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/note_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_modified_date"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="left|center_vertical"
                android:layout_marginRight="8dip"
                android:textAppearance="@style/TextAppearanceSecondaryItem" />

            <ImageView
                android:id="@+id/iv_alert_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/title_alert" />

            <TextView
                android:id="@+id/tv_alert_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="2dip"
                android:layout_marginRight="8dip"
                android:textAppearance="@style/TextAppearanceSecondaryItem" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_btn_set_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sv_note_edit"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="7dip"
                android:background="@drawable/bg_color_btn_mask" />

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:scrollbars="none"
                android:overScrollMode="never"
                android:layout_gravity="left|top"
                android:fadingEdgeLength="0dip">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <net.micode.notes.ui.NoteEditText
                        android:id="@+id/note_edit_view"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|top"
                        android:background="@null"
                        android:autoLink="all"
                        android:linksClickable="false"
                        android:minLines="12"
                        android:textAppearance="@style/TextAppearancePrimaryItem"
                        android:lineSpacingMultiplier="1.2" />

                    <LinearLayout
                        android:id="@+id/note_edit_list"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="-10dip"
                        android:visibility="gone" />
                </LinearLayout>
            </ScrollView>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="7dip"
                android:background="@drawable/bg_color_btn_mask" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/btn_set_bg_color"
        android:layout_height="43dip"
        android:layout_width="wrap_content"
        android:background="@drawable/bg_color_btn_mask"
        android:layout_gravity="top|right" />

    <LinearLayout
        android:id="@+id/note_bg_color_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/note_edit_color_selector_panel"
        android:layout_marginTop="30dip"
        android:layout_marginRight="8dip"
        android:layout_gravity="top|right"
        android:visibility="gone">

        <FrameLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_bg_yellow"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/iv_bg_yellow_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginRight="5dip"
                android:focusable="false"
                android:visibility="gone"
                android:src="@drawable/selected" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_bg_blue"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/iv_bg_blue_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:focusable="false"
                android:visibility="gone"
                android:layout_marginRight="3dip"
                android:src="@drawable/selected" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_bg_white"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/iv_bg_white_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:focusable="false"
                android:visibility="gone"
                android:layout_marginRight="2dip"
                android:src="@drawable/selected" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_bg_green"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/iv_bg_green_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:focusable="false"
                android:visibility="gone"
                android:src="@drawable/selected" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_bg_red"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/iv_bg_red_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:focusable="false"
                android:visibility="gone"
                android:src="@drawable/selected" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/font_size_selector"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/font_size_selector_bg"
        android:layout_gravity="bottom"
        android:visibility="gone">

        <FrameLayout
            android:id="@+id/ll_font_small"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/font_small"
                    android:layout_marginBottom="5dip" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_font_small"
                    android:textAppearance="@style/TextAppearanceUnderMenuIcon" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_small_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginRight="6dip"
                android:layout_marginBottom="-7dip"
                android:focusable="false"
                android:visibility="gone"
                android:src="@drawable/selected" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/ll_font_normal"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/font_normal"
                    android:layout_marginBottom="5dip" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_font_normal"
                    android:textAppearance="@style/TextAppearanceUnderMenuIcon" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_medium_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:focusable="false"
                android:visibility="gone"
                android:layout_marginRight="6dip"
                android:layout_marginBottom="-7dip"
                android:src="@drawable/selected" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/ll_font_large"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/font_large"
                    android:layout_marginBottom="5dip" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_font_large"
                    android:textAppearance="@style/TextAppearanceUnderMenuIcon" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_large_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:focusable="false"
                android:visibility="gone"
                android:layout_marginRight="6dip"
                android:layout_marginBottom="-7dip"
                android:src="@drawable/selected" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/ll_font_super"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/font_super"
                    android:layout_marginBottom="5dip" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_font_super"
                    android:textAppearance="@style/TextAppearanceUnderMenuIcon" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_super_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:focusable="false"
                android:visibility="gone"
                android:layout_marginRight="6dip"
                android:layout_marginBottom="-7dip"
                android:src="@drawable/selected" />
        </FrameLayout>
    </LinearLayout>
</FrameLayout>

<!--
================================================================================
文件注释说明
================================================================================

文件路径: layout/note_edit.xml
文件类型: layout
创建时间: 2010-2011
最后修改: 2026-04-01

功能描述:
便签编辑界面的主布局文件，包含标题栏、内容编辑区域、背景颜色选择器和字体大小选择器。

主要元素说明:
1. FrameLayout: 根布局容器，使用列表背景
2. LinearLayout (note_title): 标题栏，显示修改日期、提醒图标和颜色设置按钮
3. LinearLayout (sv_note_edit): 内容编辑区域，包含自定义的 NoteEditText 组件
4. ImageView (btn_set_bg_color): 背景颜色设置按钮
5. LinearLayout (note_bg_color_selector): 背景颜色选择器面板（黄、蓝、白、绿、红）
6. LinearLayout (font_size_selector): 字体大小选择器面板（小、正常、大、超大）

使用场景:
在便签编辑界面中使用，包括：
- 创建新便签
- 编辑现有便签
- 查看便签详情

注意事项:
1. 使用自定义组件 NoteEditText 支持便签内容编辑
2. 背景颜色选择器默认隐藏，点击颜色设置按钮显示
3. 字体大小选择器默认隐藏，通过菜单选项显示
4. 内容区域使用 ScrollView 支持长文本滚动
5. 自动链接识别功能开启，但不支持点击

相关文件:
- NoteEditActivity.java (便签编辑界面逻辑)
- NoteEditText.java (自定义便签编辑组件)
- note_edit_list_item.xml (便签编辑列表项)
- styles.xml (文本外观样式定义)

================================================================================
-->
